[package]
name = "p2p-bootnode"
publish = false
version = "0.2.0"
edition = "2024"
repository = "https://github.com/NethermindEth/catalyst-toolset"
license = "MIT"

[dependencies]
anyhow = { version = "1", default-features = false }
discv5 = { version = "0.9.1", default-features = false, features = ["libp2p"] }
jsonrpsee = { version = "0.25", default-features = false, features = [
    "http-client",
    "server",
] }
tokio = { version = "1.45", default-features = false, features = ["full"] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "env-filter",
] }

